force-app/main/default/objects/CLQ_Inspector__c/CLQ_Inspector__c.object-meta.xml
<CustomObject>
    <label>Inspector</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Inspector Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspectors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>