force-app/main/default/objects/CLQ_Inspector__c/fields/CLQ_Inspector_Name__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Inspector_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspector Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inspectors</relationshipName>
    <type>Lookup</type>
</CustomField>