force-app/main/default/objects/CLQ_Inspector__c/fields/CLQ_Total_Visit_Duration__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Total_Visit_Duration__c</fullName>
    <label>Total Visit Duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>